--- a/4_introduccion.tex
+++ b/4_introduccion.tex
@@ -12,7 +12,7 @@ Un paradigma conocido en la biología molecular expresa que los máximos locales
 \begin{figure}[ht]
 	\centering
 	\includegraphics[scale=0.5]{figures/wright_diagram.png}
-	\caption{Representación esquemática de un diagrama de Wright. Tomada de la referencia \cite{wright1932roles}}
+	\caption{Representación esquemática de un diagrama de Wright. Las zonas de mayor \textit{fitness} (+) están asociadas con estados biológicos accesibles. Las de menor \textit{fitness} (-) son solo zonas de transito. Las lineas discontinuas delimitan los distintos niveles de \textit{fitness}. Tomada de la referencia \cite{wright1932roles}}
 	\label{fig:wrightDiagram}
 \end{figure}
 
@@ -22,14 +22,14 @@ La EA se caracteriza por la pérdida progresiva de células neuronales, mientras
 
 
 %En \cite{Driver_2012} concluyen que los sobrevivientes de cáncer tienen un riesgo 33 \% menor de desarrollar la EA en comparación con aquellos sin antecedentes de cáncer. Las personas con la EA tienen un riesgo 61 \% menor de desarrollar cáncer. En \cite{Musicco_2013} encuentran que el riesgo de cáncer en pacientes con la EA se reduce a la mitad, y el riesgo de padecer la EA en pacientes con cáncer se reduce en un 35 \%.
-Los estudios epidemiológicos señalan que aquellas personas que padecen una de estas enfermedades tiene un riesgo menor de desarrollas la otra. Concretamente, los pacientes con cáncer tienen un riesgo alrededor de 31 y 35 \% menor de desarrollar la EA en comparación con aquellos que sin antecedente de cáncer. Mientras que las personas que padecen la EA tienen un riesgo entre 41 y 61 \% menor de desarrollar cáncer \cite{Roe_2010, Driver_2012, Musicco_2013}.
+Los estudios epidemiológicos señalan que aquellas personas que padecen una de estas enfermedades tiene un riesgo menor de desarrollas la otra. Concretamente, los pacientes con cáncer tienen un riesgo alrededor de 31 y 35 \% menor de desarrollar la EA en comparación con aquellos sin antecedente de cáncer. Mientras que las personas que padecen la EA tienen un riesgo entre 41 y 61 \% menor de desarrollar cáncer \cite{Roe_2010, Driver_2012, Musicco_2013}.
 %Como se reporta en  \cite{Roe_2010, Driver_2012, Musicco_2013}, los datos sugieren que los pacientes con cáncer tienen un riesgo alrededor de 31 y 35 \% menor de desarrollar la EA en comparación con aquellos sin antecedente de cáncer. Mientras que los personas que padecen la EA tienen un riesgo entre 41 y 61 \% menor de desarrollar cáncer.
 
-Esta idea de la EA y el GBM como alternativas opuestas también está apoyada por varios experimentos de biología molecular. Por ejemplo, en la referencia \cite{Liu_2013} los autores encuentran que las vías de señalización ERK/MAPK están aumentadas en GBM y disminuidas en la EA. Estas vías conectan señales extracelulares, como factores de crecimiento y citocinas, a respuestas intracelulares que regulan la proliferación celular, diferenciación y supervivencia. También, en dicha referencia, muestran que las vías de señalización de la angiopoyetina están aumentadas en la EA y disminuidas en GBM, estas relacionadas con la regulación de la angiogénesis y la estabilidad vascular.
+Esta idea de la EA y el GBM como alternativas opuestas también está apoyada por un gran número experimentos de biología molecular. Por ejemplo, en la referencia \cite{Liu_2013} los autores encuentran que las vías de señalización ERK/MAPK están aumentadas en GBM y disminuidas en la EA. Estas vías conectan señales extracelulares, como factores de crecimiento y citocinas, a respuestas intracelulares que regulan la proliferación celular, diferenciación y supervivencia. También muestran que las vías de señalización de la angiopoyetina están aumentadas en la EA y disminuidas en GBM, estas relacionadas con la regulación de la angiogénesis y la estabilidad vascular.
 
-El estudio realizados en la referencia \cite{Lanni_2020} destaca varios actores moleculares, especialmente PIN1 y p53, que están involucrados en interacciones moleculares complejas asociadas con esta correlación inversa. El aumento en la expresión de PIN1 esta relacionado con un retraso en la edad de inicio de la EA, mientras niveles bajos de expresión se asocian con un menor riesgo de desarrollar varios tipos de cáncer.
+El estudio realizados en la referencia \cite{Lanni_2020} destaca varios actores moleculares, especialmente PIN1 y p53, que están involucrados en interacciones moleculares complejas asociadas con la correlación inversa entre estas enfermedades. El aumento en la expresión de PIN1 esta relacionado con un retraso en la edad de inicio de la EA, mientras niveles bajos de expresión se asocian con un menor riesgo de desarrollar varios tipos de cáncer.
 
-Varias investigaciones no solo muestran una oposición entre la EA y el GBM, sino que también señalan el envejecimiento como un factor de riesgo común para ambas enfermedades \cite{Driver_2012, Musicco_2013 , Liu_2013, Lanni_2020, A_Driver_2010}. Esta compleja relación entre ambas enfermedades cerebrales queda representada en nuestro diagrama de Wright. Además, se puede apreciar un camino o corredor hacia el envejecimiento normal, en línea con la teoría del envejecimiento programado \cite{Magalh_es_2012, 	Gems_2022}.
+Muchas de estas investigaciones no solo muestran una oposición entre la EA y el GBM, sino que también señalan el envejecimiento como un factor de riesgo común para ambas enfermedades \cite{Driver_2012, Musicco_2013 , Liu_2013, Lanni_2020, A_Driver_2010}. Esta compleja relación entre ambas enfermedades cerebrales queda representada en nuestro diagrama de Wright. Además, se puede apreciar un camino o corredor hacia el envejecimiento normal, en línea con la teoría del envejecimiento programado \cite{Magalh_es_2012, 	Gems_2022}.
 
 A nivel genético, hay genes que varían de la misma manera en los procesos de envejecimiento, progresión de AD y cáncer, mientras que también hay genes que indican una situación disyuntiva entre la EA y el GBM. Un ejemplo de este último es el gen codificador de proteínas MMP9, que juega un papel importante en la invasión tumoral \cite{Choe2002, Xue_2017}, pero también conocido como neuroprotector, controlando las interacciones entre axones y fibras beta-amiloide \cite{Kaminari_2017}. Las desviaciones del valor de expresión génica de su referencia en el tejido normal pueden indicar una progresión potencial a AD (subexpresión) o a GBM (sobreexpresión).
 
