--- a/bibl.bib
+++ b/bibl.bib
@@ -203,4 +203,111 @@
   year={2011}
 }
 
+@Article{Lever2017,
+  author    = {Lever, Jake and Krzywinski, Martin and Altman, Naomi},
+  journal   = {Nature Methods},
+  title     = {Principal component analysis},
+  year      = {2017},
+  issn      = {1548-7091},
+  month     = {7},
+  number    = {7},
+  pages     = {641-642},
+  volume    = {14},
+  date      = {2017-07},
+  doi       = {10.1038/nmeth.4346},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{Brennan_2013,
+  author    = {Brennan, Cameron W. and Verhaak, Roel G.W. and McKenna, Aaron and Campos, Benito and Noushmehr, Houtan and Salama, Sofie R. and Zheng, Siyuan and Chakravarty, Debyani and Sanborn, J. Zachary and Berman, Samuel H. and Beroukhim, Rameen and Bernard, Brady and Wu, Chang-Jiun and Genovese, Giannicola and Shmulevich, Ilya and Barnholtz-Sloan, Jill and Zou, Lihua and Vegesna, Rahulsimham and Shukla, Sachet A. and Ciriello, Giovanni and Yung, W.K. and Zhang, Wei and Sougnez, Carrie and Mikkelsen, Tom and Aldape, Kenneth and Bigner, Darell D. and Van Meir, Erwin G. and Prados, Michael and Sloan, Andrew and Black, Keith L. and Eschbacher, Jennifer and Finocchiaro, Gaetano and Friedman, William and Andrews, David W. and Guha, Abhijit and Iacocca, Mary and O’Neill, Brian P. and Foltz, Greg and Myers, Jerome and Weisenberger, Daniel J. and Penny, Robert and Kucherlapati, Raju and Perou, Charles M. and Hayes, D. Neil and Gibbs, Richard and Marra, Marco and Mills, Gordon B. and Lander, Eric and Spellman, Paul and Wilson, Richard and Sander, Chris and Weinstein, John and Meyerson, Matthew and Gabriel, Stacey and Laird, Peter W. and Haussler, David and Getz, Gad and Chin, Lynda and Benz, Christopher and Barnholtz-Sloan, Jill and Barrett, Wendi and Ostrom, Quinn and Wolinsky, Yingli and Black, Keith L. and Bose, Bikash and Boulos, Paul T. and Boulos, Madgy and Brown, Jenn and Czerinski, Christine and Eppley, Matthew and Iacocca, Mary and Kempista, Thelma and Kitko, Teresa and Koyfman, Yakov and Rabeno, Brenda and Rastogi, Pawan and Sugarman, Michael and Swanson, Patricia and Yalamanchii, Kennedy and Otey, Ilana P. and Liu, Yingchun Spring and Xiao, Yonghong and Auman, J.Todd and Chen, Peng-Chieh and Hadjipanayis, Angela and Lee, Eunjung and Lee, Semin and Park, Peter J. and Seidman, Jonathan and Yang, Lixing and Kucherlapati, Raju and Kalkanis, Steven and Mikkelsen, Tom and Poisson, Laila M. and Raghunathan, Aditya and Scarpace, Lisa and Bernard, Brady and Bressler, Ryan and Eakin, Andrea and Iype, Lisa and Kreisberg, Richard B. and Leinonen, Kalle and Reynolds, Sheila and Rovira, Hector and Thorsson, Vesteinn and Shmulevich, Ilya and Annala, Matti J. and Penny, Robert and Paulauskis, Joseph and Curley, Erin and Hatfield, Martha and Mallery, David and Morris, Scott and Shelton, Troy and Shelton, Candace and Sherman, Mark and Yena, Peggy and Cuppini, Lucia and DiMeco, Francesco and Eoli, Marica and Finocchiaro, Gaetano and Maderna, Emanuela and Pollo, Bianca and Saini, Marco and Balu, Saianand and Hoadley, Katherine A. and Li, Ling and Miller, C. Ryan and Shi, Yan and Topal, Michael D. and Wu, Junyuan and Dunn, Gavin and Giannini, Caterina and O’Neill, Brian P. and Aksoy, B. Arman and Antipin, Yevgeniy and Borsu, Laetitia and Berman, Samuel H. and Brennan, Cameron W. and Cerami, Ethan and Chakravarty, Debyani and Ciriello, Giovanni and Gao, Jianjiong and Gross, Benjamin and Jacobsen, Anders and Ladanyi, Marc and Lash, Alex and Liang, Yupu and Reva, Boris and Sander, Chris and Schultz, Nikolaus and Shen, Ronglai and Socci, Nicholas D. and Viale, Agnes and Ferguson, Martin L. and Chen, Qing-Rong and Demchok, John A. and Dillon, Laura A.L. and Shaw, Kenna R. Mills and Sheth, Margi and Tarnuzzer, Roy and Wang, Zhining and Yang, Liming and Davidsen, Tanja and Guyer, Mark S. and Ozenberger, Bradley A. and Sofia, Heidi J. and Bergsten, Julie and Eckman, John and Harr, Jodi and Myers, Jerome and Smith, Christine and Tucker, Kelly and Winemiller, Cindy and Zach, Leigh Anne and Ljubimova, Julia Y. and Eley, Greg and Ayala, Brenda and Jensen, Mark A. and Kahn, Ari and Pihl, Todd D. and Pot, David A. and Wan, Yunhu and Eschbacher, Jennifer and Foltz, Greg and Hansen, Nathan and Hothi, Parvi and Lin, Biaoyang and Shah, Nameeta and Yoon, Jae-geun and Lau, Ching and Berens, Michael and Ardlie, Kristin and Beroukhim, Rameen and Carter, Scott L. and Cherniack, Andrew D. and Noble, Mike and Cho, Juok and Cibulskis, Kristian and DiCara, Daniel and Frazer, Scott and Gabriel, Stacey B. and Gehlenborg, Nils and Gentry, Jeff and Heiman, David and Kim, Jaegil and Jing, Rui and Lander, Eric S. and Lawrence, Michael and Lin, Pei and Mallard, Will and Meyerson, Matthew and Onofrio, Robert C. and Saksena, Gordon and Schumacher, Steve and Sougnez, Carrie and Stojanov, Petar and Tabak, Barbara and Voet, Doug and Zhang, Hailei and Zou, Lihua and Getz, Gad and Dees, Nathan N. and Ding, Li and Fulton, Lucinda L. and Fulton, Robert S. and Kanchi, Krishna-Latha and Mardis, Elaine R. and Wilson, Richard K. and Baylin, Stephen B. and Andrews, David W. and Harshyne, Larry and Cohen, Mark L. and Devine, Karen and Sloan, Andrew E. and VandenBerg, Scott R. and Berger, Mitchel S. and Prados, Michael and Carlin, Daniel and Craft, Brian and Ellrott, Kyle and Goldman, Mary and Goldstein, Theodore and Grifford, Mia and Haussler, David and Ma, Singer and Ng, Sam and Salama, Sofie R. and Sanborn, J. Zachary and Stuart, Joshua and Swatloski, Teresa and Waltman, Peter and Zhu, Jing and Foss, Robin and Frentzen, Barbara and Friedman, William and McTiernan, Raquel and Yachnis, Anthony and Hayes, D. Neil and Perou, Charles M. and Zheng, Siyuan and Vegesna, Rahulsimham and Mao, Yong and Akbani, Rehan and Aldape, Kenneth and Bogler, Oliver and Fuller, Gregory N. and Liu, Wenbin and Liu, Yuexin and Lu, Yiling and Mills, Gordon and Protopopov, Alexei and Ren, Xiaojia and Sun, Youting and Wu, Chang-Jiun and Yung, W.K. Alfred and Zhang, Wei and Zhang, Jianhua and Chen, Ken and Weinstein, John N. and Chin, Lynda and Verhaak, Roel G.W. and Noushmehr, Houtan and Weisenberger, Daniel J. and Bootwalla, Moiz S. and Lai, Phillip H. and Triche, Timothy J. and Van Den Berg, David J. and Laird, Peter W. and Gutmann, David H. and Lehman, Norman L. and VanMeir, Erwin G. and Brat, Daniel and Olson, Jeffrey J. and Mastrogianakis, Gena M. and Devi, Narra S. and Zhang, Zhaobin and Bigner, Darell and Lipp, Eric and McLendon, Roger},
+  journal   = {Cell},
+  title     = {The Somatic Genomic Landscape of Glioblastoma},
+  year      = {2013},
+  issn      = {0092-8674},
+  month     = oct,
+  number    = {2},
+  pages     = {462--477},
+  volume    = {155},
+  doi       = {10.1016/j.cell.2013.09.034},
+  publisher = {Elsevier BV},
+}
+
+@Article{ellingson2013probabilistic,
+  author    = {Ellingson, BM and Lai, A and Harris, RJ and Selfridge, JM and Yong, WH and Das, K and Pope, WB and Nghiemphu, PL and Vinters, HV and Liau, LM and others},
+  journal   = {American Journal of neuroradiology},
+  title     = {Probabilistic radiographic atlas of glioblastoma phenotypes},
+  year      = {2013},
+  number    = {3},
+  pages     = {533--540},
+  volume    = {34},
+  publisher = {American Journal of Neuroradiology},
+}
+
+@Article{Huang_2009,
+  author    = {Huang, Sui and Ernberg, Ingemar and Kauffman, Stuart},
+  journal   = {Seminars in Cell \& Developmental Biology},
+  title     = {Cancer attractors: A systems view of tumors from a gene network dynamics and developmental perspective},
+  year      = {2009},
+  issn      = {1084-9521},
+  month     = sep,
+  number    = {7},
+  pages     = {869--876},
+  volume    = {20},
+  doi       = {10.1016/j.semcdb.2009.07.003},
+  publisher = {Elsevier BV},
+}
+
+@Article{Gonzalez_2023,
+  author    = {Gonzalez, Augusto and Leon, Dario A. and Perera, Yasser and Perez, Rolando},
+  journal   = {PLOS ONE},
+  title     = {On the gene expression landscape of cancer},
+  year      = {2023},
+  issn      = {1932-6203},
+  month     = feb,
+  number    = {2},
+  pages     = {e0277786},
+  volume    = {18},
+  doi       = {10.1371/journal.pone.0277786},
+  editor    = {Sauli, Elingarami},
+  publisher = {Public Library of Science (PLoS)},
+}
+
+@Article{Miller_2017,
+  author    = {Miller, Jeremy A and Guillozet-Bongaarts, Angela and Gibbons, Laura E and Postupna, Nadia and Renz, Anne and Beller, Allison E and Sunkin, Susan M and Ng, Lydia and Rose, Shannon E and Smith, Kimberly A and Szafer, Aaron and Barber, Chris and Bertagnolli, Darren and Bickley, Kristopher and Brouner, Krissy and Caldejon, Shiella and Chapin, Mike and Chua, Mindy L and Coleman, Natalie M and Cudaback, Eiron and Cuhaciyan, Christine and Dalley, Rachel A and Dee, Nick and Desta, Tsega and Dolbeare, Tim A and Dotson, Nadezhda I and Fisher, Michael and Gaudreault, Nathalie and Gee, Garrett and Gilbert, Terri L and Goldy, Jeff and Griffin, Fiona and Habel, Caroline and Haradon, Zeb and Hejazinia, Nika and Hellstern, Leanne L and Horvath, Steve and Howard, Kim and Howard, Robert and Johal, Justin and Jorstad, Nikolas L and Josephsen, Samuel R and Kuan, Chihchau L and Lai, Florence and Lee, Eric and Lee, Felix and Lemon, Tracy and Li, Xianwu and Marshall, Desiree A and Melchor, Jose and Mukherjee, Shubhabrata and Nyhus, Julie and Pendergraft, Julie and Potekhina, Lydia and Rha, Elizabeth Y and Rice, Samantha and Rosen, David and Sapru, Abharika and Schantz, Aimee and Shen, Elaine and Sherfield, Emily and Shi, Shu and Sodt, Andy J and Thatra, Nivretta and Tieu, Michael and Wilson, Angela M and Montine, Thomas J and Larson, Eric B and Bernard, Amy and Crane, Paul K and Ellenbogen, Richard G and Keene, C Dirk and Lein, Ed},
+  journal   = {eLife},
+  title     = {Neuropathological and transcriptomic characteristics of the aged brain},
+  year      = {2017},
+  issn      = {2050-084X},
+  month     = nov,
+  volume    = {6},
+  doi       = {10.7554/elife.31126},
+  publisher = {eLife Sciences Publications, Ltd},
+}
+
+@Article{Gonzalez_2021,
+  author    = {Gonzalez, Augusto and Nieves, Joan and Leon, Dario A. and Bringas Vega, Maria Luisa and Sosa, Pedro Valdes},
+  journal   = {Scientific Reports},
+  title     = {Gene expression rearrangements denoting changes in the biological state},
+  year      = {2021},
+  issn      = {2045-2322},
+  month     = apr,
+  number    = {1},
+  volume    = {11},
+  doi       = {10.1038/s41598-021-87764-0},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{alz2019,
+  journal   = {Alzheimer’s \& Dementia},
+  title     = {2019 Alzheimer’s disease facts and figures},
+  year      = {2019},
+  issn      = {1552-5279},
+  month     = mar,
+  number    = {3},
+  pages     = {321--387},
+  volume    = {15},
+  doi       = {10.1016/j.jalz.2019.01.010},
+  publisher = {Wiley},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
