--- a/4_introduccion.tex
+++ b/4_introduccion.tex
@@ -7,7 +7,7 @@
 
 El \textit{fitness} celular refiere a la capacidad de una célula de sobrevivir y proliferar en un ambiente determinado. Abarca varios factores como la capacidad de la célula para adaptarse al ambiente, resistir al estrés y mantener la homeostasis. Este concepto es particularmente importante en la biología del cáncer, donde los niveles de de \textit{fitness} celular pueden determinar su supervivencia y dominancia dentro de un tejido.
 
-Un paradigma conocido en la biología molecular expresa que los máximos locales de \textit{fitness} en el espacio de expresión genética están relacionados con estados biológicos accesibles. Un diagrama de Wright es una representación gráfica reducida del panorama genético, donde los picos y valles representan diferentes genotipos y sus niveles relativos de \textit{fitness} \cite{wright1932roles}, ver figura \ref{fig:wrightDiagram}. 
+Un paradigma conocido en la biología molecular expresa que los máximos locales de \textit{fitness}, en el espacio de expresión genética, están relacionados con estados biológicos accesibles. Un diagrama de Wright es una representación gráfica reducida del panorama genético, donde los picos y valles representan diferentes genotipos y sus niveles relativos de \textit{fitness} \cite{wright1932roles}, ver figura \ref{fig:wrightDiagram}. 
 
 \begin{figure}[ht]
 	\centering
@@ -16,29 +16,30 @@ Un paradigma conocido en la biología molecular expresa que los máximos locales
 	\label{fig:wrightDiagram}
 \end{figure}
 
-Esta representación ha sido aplicada a la descripción del destino celular a lo largo de una linea de diferenciación \cite{casey2020theory}. Sin embargo, hasta donde sabemos, no hay gráficos basados en datos reales para un tejido dado que represente, al menos de forma parcial, un diagrama de Wright con más de dos máximos. En el presente trabajo, mostramos un diagrama para la materia blanca del cerebro en el cual el estado normal (N) se representa junto con el atractor de glioblastoma (GBM) y el máximo relacionado con la enfermedad del Alzheimer (EA).
+Esta representación ha sido aplicada a la descripción del destino celular a lo largo de una linea de diferenciación \cite{casey2020theory}. Sin embargo, hasta donde sabemos, no hay gráficos basados en datos reales para un tejido dado que represente, al menos de forma parcial, un diagrama de Wright con más de dos máximos. En el presente trabajo, mostramos un diagrama para la materia blanca del cerebro en el cual el estado normal (N) se representa junto con el atractor de glioblastoma (GB) y el máximo relacionado con la enfermedad del Alzheimer (EA).
 
-La EA se caracteriza por la pérdida progresiva de células neuronales, mientras que el GBM es un tipo de cáncer cerebral que implica la proliferación descontrolada de células. Algunas investigaciones muestran que pacientes con la EA podrían tener un menor riesgo de desarrollar GBM. Por ejemplo, en la referencia \cite{ou2012does} se muestra que ambas enfermedades presentan un aumento en el estrés oxidativo, en la EA, esto hace que las células neuronales sean más vulnerables a la muerte, mientras que en el GBM, las células cancerosas se vuelven más resistentes. Además, se plantea que la degeneración de células que secretan acetilcolina en la EA podría tener un efecto protector contra el cáncer, ya que esta sustancia puede estimular el crecimiento de células cancerosas.
+La EA se caracteriza por la pérdida progresiva de células neuronales, mientras que el GB es un tipo de cáncer cerebral que implica la proliferación descontrolada de células. Algunas investigaciones muestran que pacientes con la EA podrían tener un menor riesgo de desarrollar GB. Por ejemplo, en la referencia \cite{ou2012does} se muestra que ambas enfermedades presentan un aumento en el estrés oxidativo, en la EA, esto hace que las células neuronales sean más vulnerables a la muerte, mientras que en el GB, las células cancerosas se vuelven más resistentes. Además, se plantea que la degeneración de células que secretan acetilcolina en la EA podría tener un efecto protector contra el cáncer, ya que esta sustancia puede estimular el crecimiento de células cancerosas.
 
 
 %En \cite{Driver_2012} concluyen que los sobrevivientes de cáncer tienen un riesgo 33 \% menor de desarrollar la EA en comparación con aquellos sin antecedentes de cáncer. Las personas con la EA tienen un riesgo 61 \% menor de desarrollar cáncer. En \cite{Musicco_2013} encuentran que el riesgo de cáncer en pacientes con la EA se reduce a la mitad, y el riesgo de padecer la EA en pacientes con cáncer se reduce en un 35 \%.
 Los estudios epidemiológicos señalan que aquellas personas que padecen una de estas enfermedades tiene un riesgo menor de desarrollas la otra. Concretamente, los pacientes con cáncer tienen un riesgo alrededor de 31 y 35 \% menor de desarrollar la EA en comparación con aquellos sin antecedente de cáncer. Mientras que las personas que padecen la EA tienen un riesgo entre 41 y 61 \% menor de desarrollar cáncer \cite{Roe_2010, Driver_2012, Musicco_2013}.
 %Como se reporta en  \cite{Roe_2010, Driver_2012, Musicco_2013}, los datos sugieren que los pacientes con cáncer tienen un riesgo alrededor de 31 y 35 \% menor de desarrollar la EA en comparación con aquellos sin antecedente de cáncer. Mientras que los personas que padecen la EA tienen un riesgo entre 41 y 61 \% menor de desarrollar cáncer.
 
-Esta idea de la EA y el GBM como alternativas opuestas también está apoyada por un gran número experimentos de biología molecular. Por ejemplo, en la referencia \cite{Liu_2013} los autores encuentran que las vías de señalización ERK/MAPK están aumentadas en GBM y disminuidas en la EA. Estas vías conectan señales extracelulares, como factores de crecimiento y citocinas, a respuestas intracelulares que regulan la proliferación celular, diferenciación y supervivencia. También muestran que las vías de señalización de la angiopoyetina están aumentadas en la EA y disminuidas en GBM, estas relacionadas con la regulación de la angiogénesis y la estabilidad vascular.
+Esta idea de la EA y el GB como alternativas opuestas también está apoyada por un gran número experimentos de biología molecular. Por ejemplo, en la referencia \cite{Liu_2013} los autores encuentran que las vías de señalización ERK/MAPK están aumentadas en GB y disminuidas en la EA. Estas vías conectan señales extracelulares, como factores de crecimiento y citocinas, a respuestas intracelulares que regulan la proliferación celular, diferenciación y supervivencia. También muestran que las vías de señalización de la angiopoyetina están aumentadas en la EA y disminuidas en GB, estas relacionadas con la regulación de la angiogénesis y la estabilidad vascular.
 
-El estudio realizados en la referencia \cite{Lanni_2020} destaca varios actores moleculares, especialmente PIN1 y p53, que están involucrados en interacciones moleculares complejas asociadas con la correlación inversa entre estas enfermedades. El aumento en la expresión de PIN1 esta relacionado con un retraso en la edad de inicio de la EA, mientras niveles bajos de expresión se asocian con un menor riesgo de desarrollar varios tipos de cáncer.
+El estudio realizados por C. Lanni y colaboradores en la referencia \cite{Lanni_2020} destaca varios actores moleculares, especialmente PIN1 y p53, que están involucrados en interacciones moleculares complejas asociadas con la correlación inversa entre estas enfermedades. El aumento en la expresión de PIN1 esta relacionado con un retraso en la edad de inicio de la EA, mientras niveles bajos de expresión se asocian con un menor riesgo de desarrollar varios tipos de cáncer.
 
-Muchas de estas investigaciones no solo muestran una oposición entre la EA y el GBM, sino que también señalan el envejecimiento como un factor de riesgo común para ambas enfermedades \cite{Driver_2012, Musicco_2013 , Liu_2013, Lanni_2020, A_Driver_2010}. Esta compleja relación entre ambas enfermedades cerebrales queda representada en nuestro diagrama de Wright. Además, se puede apreciar un camino o corredor hacia el envejecimiento normal, en línea con la teoría del envejecimiento programado \cite{Magalh_es_2012, 	Gems_2022}.
+% TODO: Tal vez pueda hablar un poco más del proceso de envejecimiento y de la teoría del envejecimiento programado
+Muchas de estas investigaciones no solo muestran una oposición entre la EA y el GB, sino que también señalan el envejecimiento como un factor de riesgo común para ambas enfermedades \cite{Driver_2012, Musicco_2013 , Liu_2013, Lanni_2020, A_Driver_2010}. Esta compleja relación entre ambas enfermedades cerebrales queda representada en nuestro diagrama de Wright. Además, se puede apreciar un camino o corredor hacia el envejecimiento normal, en línea con la teoría del envejecimiento programado \cite{Magalh_es_2012, 	Gems_2022}.
 
-A nivel genético, hay genes que varían de la misma manera en los procesos de envejecimiento, progresión de AD y cáncer, mientras que también hay genes que indican una situación disyuntiva entre la EA y el GBM. Un ejemplo de este último es el gen codificador de proteínas MMP9, que juega un papel importante en la invasión tumoral \cite{Choe2002, Xue_2017}, pero también conocido como neuroprotector, controlando las interacciones entre axones y fibras beta-amiloide \cite{Kaminari_2017}. Las desviaciones del valor de expresión génica de su referencia en el tejido normal pueden indicar una progresión potencial a AD (subexpresión) o a GBM (sobreexpresión).
+A nivel genético, hay genes que varían de la misma manera en los procesos de envejecimiento, progresión de AD y cáncer, mientras que también hay genes que indican una situación disyuntiva entre la EA y el GB. Un ejemplo de este último es el gen codificador de proteínas MMP9, que juega un papel importante en la invasión tumoral \cite{Choe2002, Xue_2017}, pero también conocido como neuroprotector, controlando las interacciones entre axones y fibras beta-amiloide \cite{Kaminari_2017}. Las desviaciones del valor de expresión génica de su referencia en el tejido normal pueden indicar una progresión potencial a AD (subexpresión) o a GB (sobreexpresión).
 
-Esta visión inusual puede ayudar a comprender las relaciones entre la EA y el GBM, e identificar marcadores génicos útiles para ambos procesos. Como un bono adicional, la representación permite encontrar preguntas muy interesantes que se discutirán a continuación.
+Esta visión inusual puede ayudar a comprender las relaciones entre la EA y el GB, e identificar marcadores génicos útiles para ambos procesos. Como un bono adicional, la representación permite encontrar preguntas muy interesantes que se discutirán a continuación.
 
 \alert{El trabajo presentado como tesis de diploma consta de una introducción, tres capítulos, las conclusiones y las recomendaciones. El contenido se distribuye de la siguiente forma:}
 
 \begin{itemize}
-	\item[$\bullet$] \textbf{Introducción:} Se hace una breve descripción del panorama genético y epidemiológico que engloban a la EA, el GBM y el envejecimiento. Se ejemplifican las relaciones que existen entre estos atractores.
+	\item[$\bullet$] \textbf{Introducción:} Se hace una breve descripción del panorama genético y epidemiológico que engloban a la EA, el GB y el envejecimiento. Se ejemplifican las relaciones que existen entre estos atractores.
 	
 	\item[$\bullet$] \textbf{Capítulo 1:} 
 	
